--- a/popup/popup.html
+++ b/popup/popup.html
@@ -13,15 +13,42 @@
     body {
       width: 320px;
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-      background: #09090b;
-      color: #fafafa;
+      background: var(--bg-color);
+      color: var(--text-color);
       padding: 16px;
+      transition: all 0.3s ease;
+    }
+
+    body.light-mode {
+      --bg-color: #ffffff;
+      --text-color: #18181b;
+      --border-color: #e4e4e7;
+      --input-bg: #fafafa;
+      --label-color: #52525b;
+      --button-bg: #18181b;
+      --button-text: #fafafa;
+    }
+
+    body.dark-mode {
+      --bg-color: #09090b;
+      --text-color: #fafafa;
+      --border-color: #27272a;
+      --input-bg: #09090b;
+      --label-color: #a1a1aa;
+      --button-bg: #fafafa;
+      --button-text: #18181b;
+    }
+
+    .header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 16px;
     }
 
     h1 {
       font-size: 16px;
-      margin-bottom: 16px;
-      color: #fafafa;
+      color: var(--text-color);
       display: flex;
       align-items: center;
       gap: 8px;
@@ -33,6 +60,31 @@
       border-radius: 4px;
     }
 
+    .theme-toggle {
+      width: 40px;
+      height: 40px;
+      border: none;
+      border-radius: 6px;
+      background: var(--input-bg);
+      border: 1px solid var(--border-color);
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      transition: all 0.2s;
+      padding: 0;
+    }
+
+    .theme-toggle:hover {
+      opacity: 0.8;
+    }
+
+    .theme-toggle svg {
+      width: 20px;
+      height: 20px;
+      stroke: var(--text-color);
+    }
+
     .form-group {
       margin-bottom: 12px;
     }
@@ -40,7 +92,7 @@
     label {
       display: block;
       font-size: 12px;
-      color: #a1a1aa;
+      color: var(--label-color);
       margin-bottom: 4px;
       font-weight: 500;
     }
@@ -48,31 +100,31 @@
     input {
       width: 100%;
       padding: 10px;
-      border: 1px solid #27272a;
+      border: 1px solid var(--border-color);
       border-radius: 6px;
-      background: #09090b;
-      color: #fafafa;
+      background: var(--input-bg);
+      color: var(--text-color);
       font-size: 13px;
       outline: none;
       transition: all 0.2s;
     }
 
     input:focus {
-      border-color: #fafafa;
-      box-shadow: 0 0 0 1px #fafafa;
+      border-color: var(--text-color);
+      box-shadow: 0 0 0 1px var(--text-color);
     }
 
     input::placeholder {
-      color: #52525b;
+      color: var(--label-color);
     }
 
-    button {
+    button#saveBtn {
       width: 100%;
       padding: 10px;
       border: none;
       border-radius: 6px;
-      background: #fafafa;
-      color: #18181b;
+      background: var(--button-bg);
+      color: var(--button-text);
       font-size: 13px;
       font-weight: 600;
       cursor: pointer;
@@ -80,7 +132,7 @@
       margin-top: 8px;
     }
 
-    button:hover {
+    button#saveBtn:hover {
       opacity: 0.9;
     }
 
@@ -110,13 +162,13 @@
     .help {
       margin-top: 16px;
       padding-top: 12px;
-      border-top: 1px solid #27272a;
+      border-top: 1px solid var(--border-color);
       font-size: 11px;
-      color: #a1a1aa;
+      color: var(--label-color);
     }
 
     .help a {
-      color: #fafafa;
+      color: var(--text-color);
       text-decoration: none;
       font-weight: 500;
     }
@@ -127,11 +179,21 @@
   </style>
 </head>
 
-<body>
-  <h1>
-    <img src="../logo.png" class="logo" alt="BetterCF">
-    betterCF
-  </h1>
+<body class="dark-mode">
+  <div class="header">
+    <h1>
+      <img src="../logo.png" class="logo" alt="BetterCF">
+      betterCF
+    </h1>
+    <button class="theme-toggle" id="themeToggle" title="Toggle theme">
+      <svg id="sunIcon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" style="display: none;">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M12 3v2.25m6.364.386-1.591 1.591M21 12h-2.25m-.386 6.364-1.591-1.591M12 18.75V21m-4.773-4.227-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0Z" />
+      </svg>
+      <svg id="moonIcon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M21.752 15.002A9.72 9.72 0 0 1 18 15.75c-5.385 0-9.75-4.365-9.75-9.75 0-1.33.266-2.597.748-3.752A9.753 9.753 0 0 0 3 11.25C3 16.635 7.365 21 12.75 21a9.753 9.753 0 0 0 9.002-5.998Z" />
+      </svg>
+    </button>
+  </div>
 
   <div class="form-group">
     <label>API Key</label>
@@ -156,4 +218,3 @@
 </body>
 
 </html>
-
